<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <EditText
            android:layout_gravity="right"
            android:id="@+id/et_note_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/note_edit_text"
            android:hint="@string/quote_header"
            android:padding="10dp"
            android:textColor="@color/secondary"
            android:textSize="20sp"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:inputType="none"/>


        <EditText
            android:id="@+id/et_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/note_edit_text"
            android:gravity="top"
            android:hint="@string/quote"
            android:padding="10dp"
            android:textColor="@color/secondary_light"
            android:importantForAutofill="no"
            android:inputType="none"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">


            <Button
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_primary"
                android:onClick="discardNote"
                android:text="@string/discard"
                android:textColor="@color/primary"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_secondary"
                android:onClick="saveNote"
                android:text="@string/save"
                android:textColor="@color/secondary"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>